# jpid-rs

./: Cargo.toml  Makefile  README.md  git_push.sh
.openapi-generator/: FILES
src/apis/: addresszip_api.rs  configuration.rs  mod.rs  searchcode_api.rs  token_api.rs
src/models/: address_req.rs  address_res.rs  address_res_addresses_inner.rs  bad_request.rs  error.rs  forbidden.rs  jtoken_req.rs  jtoken_res.rs  mod.rs  not_found.rs  searchcode_search_res.rs  searchcode_search_res_addresses_inner.rs  unauthorized.rs
tools/: fix_cargo_toml.sh
tools/remove_comments/: main.go
